--- a/src/App.css
+++ b/src/App.css
@@ -855,7 +855,7 @@ body {
   background: #f5f5f5;
 }
 .dropdown-item.active {
-  color: rgb(19, 144, 19); /* green when selected */
+  /*color: rgb(19, 144, 19); /* green when selected */
 }
 
 /* Ensure mobile submenu items don't inherit green */
