--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,11 @@ html, body {
   background-color: white;
   height: 120px;
 }
+@media(max-width:500px) {
+  .logo{
+    height:80px;
+  }
+}
 .title {
   margin-left: 20px;
 }
@@ -74,6 +79,14 @@ html, body {
 }
 .title-line-2 {
   margin: 0;
+}
+@media(max-width:500px) {
+  .title-line-1 {
+    font-size: 1.5rem;
+  }
+  .title-line-2 {
+    font-size: 1.5rem;
+}  
 }
 .tab-list {
   min-width: 55%;
@@ -96,6 +109,12 @@ html, body {
   right: 5vw;
   top: 5vh;
   animation-duration: 0.5s;
+}
+@media(max-width:500px) {
+  .fab-button{
+    right: 2vw;
+    top: 1vh;
+  }  
 }
 .menu {
   z-index: 999;
@@ -175,6 +194,12 @@ html, body {
   font-weight: 300;
   margin: 5px;
 }
+@media(max-width:500px) {
+  .details {
+    width: 100%;
+    flex-direction: column;
+  }
+}
 .green-item {
   color: rgb(19, 144, 19);
 }
@@ -186,8 +211,10 @@ html, body {
 }
 .home > .title {
   font-size: 3.3rem;
+  text-align: center;
   margin-bottom: 0;
 }
+
 .home > .dept {
   letter-spacing: 4px;
   font-weight: 400;
@@ -196,6 +223,14 @@ html, body {
   margin: 0;
   margin-bottom: 50px;
   text-align: center;
+}
+@media(max-width:500px) {
+  .home > .title {
+    font-size: 2rem;
+  }
+  .home > .dept {
+    font-size: 1rem;
+  }
 }
 .home > .carousel {
   display: flex;
@@ -207,6 +242,13 @@ html, body {
   background-color: white;
   height: 600px;
   flex: 1;
+}
+@media(max-width:500px) {
+  .home > .carousel {
+    width:90vw;
+  }
+  .carousel div {
+  }
 }
 .carousel .slider {
   position: relative;
@@ -282,8 +324,21 @@ html, body {
 }
 .carousel p {
   font-size: 1.3rem;
+  text-align: justify;
   width: 80%;
   animation-duration: 0.5s;
+}
+@media(max-width:500px) {
+  .carousel-title {
+    font-size: 1.3rem;
+    margin-top: 10px;
+  }
+  .carousel-para {
+    margin-top: 0;
+  }
+  .carousel p {
+    font-size: 1rem;
+  }  
 }
 .next-button {
   position: absolute;
@@ -398,9 +453,22 @@ html, body {
 .reasearch-description > .content {
   opacity: 75%;
   margin-top: 0;
-  text-align: center;
+  text-align: justify;
   font-size: 1.3rem;
   max-width: 60vw;
+}
+@media(max-width:500px) {
+  .reasearch-description {
+    width: 90vw;
+  }
+  .reasearch-description > .title {
+    margin-left: 0;
+    text-align: center;
+  }  
+  .reasearch-description > .content {
+    max-width: 80vw;
+    font-size: 1rem;
+  }  
 }
 .mentor-description {
   display: flex;
@@ -409,17 +477,8 @@ html, body {
   margin-top: 50px;
   margin-bottom: 100px;
   padding: 20px 0;
-  padding-right: 10px;
+  padding-right: 0;
   background: darkcyan;
-}
-@media (max-width:930px) {
-  .mentor-description{
-    display: flex;
-    flex-wrap:wrap;
-    flex-direction: column;
-    align-items: center;
-  }
-  
 }
 .mentor-description > .left {
   display: flex;
@@ -458,6 +517,44 @@ html, body {
 .mentor-description p {
   font-size: 1.4rem;
   opacity: 0.9;
+}
+@media (max-width:930px) {
+  .mentor-description{
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction: column;
+    align-items: center;
+  }  
+  .mentor-description h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  .mentor-description h1 {
+    font-size: 1.5rem;
+  }
+  .mentor-description h1 {
+    
+  }
+  .mentor-description > .left {
+    align-items: center;
+    margin:10px;
+    padding: 0;
+  }
+  .mentor-description > .right {
+    flex: none;
+    min-width: fit-content;
+    min-height: 300px;
+  }
+  .mentor-description  img {
+    margin: auto auto;
+    width: 300px;
+    height: 300px;
+  }
+  .mentor-description p {
+    font-size: 1.2rem;
+    text-align: justify;
+    opacity: 0.9;
+  }
 }
 .members {
   margin-bottom: 100px;
