--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,15 @@
     transform: rotate(-90deg);
   }
 }
+
+.fjalla-one-regular {
+  font-family: "Fjalla One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
-  background-color: rgb(144, 206, 197);
+  background-color: #F2E6CA;
   margin: 0;
 }
 html, body {
@@ -37,7 +44,7 @@ html, body {
 }
 
 #root {
-  background-color: rgb(144, 206, 197);
+  background-color: #F2E6CA;
 }
 .tabs {
   animation-name: fadeIn;
@@ -58,6 +65,7 @@ html, body {
   border-bottom: 1px solid black;
 }
 .logo-title {
+  color: rgb(84, 88, 65);
   display: flex;
   align-items: center;
   width: 400px;
@@ -75,9 +83,12 @@ html, body {
   margin-left: 20px;
 }
 .title-line-1 {
+  font-family: 'DM Serif Text';
   margin: 0;
+  margin-bottom: -5px;
 }
 .title-line-2 {
+  font-family: 'DM Serif Text';
   margin: 0;
 }
 @media(max-width:500px) {
@@ -97,9 +108,11 @@ html, body {
   flex-wrap: wrap;
 }
 .tab-name {
-  font-size: 1.3rem;
-  font-weight: 900;
-  font-family: "Playfair Display", serif;
+  font-family: 'Fjalla One';
+  color: rgb(84, 88, 65);
+  font-size: 1.4rem;
+  font-weight: 500;
+  /* font-family: "Playfair Display", serif; */
   font-stretch: condensed;
   margin: auto 15px;
   cursor: pointer;
@@ -187,10 +200,12 @@ html, body {
 }
 .details .title {
   color: rgb(24, 197, 159);
+  font-family: 'DM Serif Text';
   margin-bottom: 30px;
 }
 .details h3 {
-  font-size: 1.4rem;
+  font-family: 'Libre Franklin';
+  font-size: 1.3rem;
   font-weight: 300;
   margin: 5px;
 }
@@ -201,7 +216,7 @@ html, body {
   }
 }
 .green-item {
-  color: rgb(19, 144, 19);
+  color: rgb(135, 144, 90);
 }
 
 .home {
@@ -210,17 +225,21 @@ html, body {
   align-items: center;
 }
 .home > .title {
+  font-family: 'DM Serif Text';
+  color: #839053;
   font-size: 3.3rem;
   text-align: center;
   margin-bottom: 0;
 }
 
 .home > .dept {
+  font-family: 'Fjalla One';
   letter-spacing: 4px;
   font-weight: 400;
-  color: black;
+  color: rgb(84, 88, 65);
   opacity: 0.7;
   margin: 0;
+  margin-top: 10px;
   margin-bottom: 50px;
   text-align: center;
 }
@@ -233,16 +252,19 @@ html, body {
   }
 }
 .home > .carousel {
+  font-family: 'Libre Franklin';
   display: flex;
   width: 80vw;
   height: 600px;
 }
+
 
 .carousel div {
   background-color: white;
   height: 600px;
   flex: 1;
 }
+
 @media(max-width:500px) {
   .home > .carousel {
     width:90vw;
@@ -315,6 +337,7 @@ html, body {
   align-items: center;
 }
 .carousel-title {
+  font-family: 'Fjalla One';
   font-size: 1.7rem;
   margin-top: 40px;
   min-width: 30%;
@@ -323,7 +346,8 @@ html, body {
   overflow-y: auto;
 }
 .carousel p {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  line-height: 28px;
   text-align: justify;
   width: 80%;
   animation-duration: 0.5s;
@@ -441,19 +465,24 @@ html, body {
   align-items: center;
   margin-top: 50px;
   min-height: 300px;
-  background-color: white;
+  background-color: #858E59;
+  color: white;
   width: 80vw;
   border-radius: 20px;
 }
 .reasearch-description > .title {
-  background: linear-gradient(to right, rgb(75, 223, 82), green);
+  color: white;
+  font-family: "DM Serif Text";
   background-clip: text;
-  color: transparent;
 }
 .reasearch-description > .content {
-  opacity: 75%;
+  color: white;
+  font-family: "Libre Franklin";
+  line-height: 1.8rem;
+  font-weight: 400;
+  opacity: 95%; 
   margin-top: 0;
-  text-align: justify;
+  text-align: center;
   font-size: 1.3rem;
   max-width: 60vw;
 }
@@ -474,11 +503,12 @@ html, body {
   display: flex;
   flex-direction: row-reverse;
   width: 80vw;
-  margin-top: 50px;
+  margin-top: 90px;
   margin-bottom: 100px;
   padding: 20px 0;
   padding-right: 0;
-  background: darkcyan;
+  background: rgb(84, 88, 65);
+  border-radius: 20px;
 }
 .mentor-description > .left {
   display: flex;
@@ -506,17 +536,24 @@ html, body {
   animation-duration: 2s;
 }
 .mentor-description h1 {
+  color: rgb(235, 164, 69);
+  font-family: 'DM Serif Text';
   font-size: 3rem;
   margin: 0;
 }
 .mentor-description h2 {
+  font-family: 'Fjalla One';
   opacity: 0.7;
   font-size: 2rem;
+  font-weight: 400;
   margin: 0;
 }
 .mentor-description p {
+  font-family: 'Libre Franklin';
+  color: rgb(242, 231, 204);
   font-size: 1.4rem;
   opacity: 0.9;
+  margin-top: 40px;
 }
 @media (max-width:930px) {
   .mentor-description{
@@ -569,6 +606,8 @@ html, body {
   margin-bottom: 100px;
 }
 .members .title {
+  font-family: 'DM Serif Text';
+  color: rgb(84, 88, 65);
   font-size: 3.5rem;
   text-align: center;
   margin: 0;
@@ -601,6 +640,7 @@ html, body {
   border-bottom: 5px solid rgba(255, 255, 255, 0.3);
 }
 .flex-container {
+  margin-top: 15px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
