--- a/src/App.css
+++ b/src/App.css
@@ -338,9 +338,12 @@ html, body {
 }
 .carousel-title {
   font-family: 'Fjalla One';
-  font-size: 1.7rem;
-  margin-top: 40px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.6rem;
+  margin-top: 50px;
   min-width: 30%;
+  max-width: 80%;
 }
 .carousel-para {
   overflow-y: auto;
@@ -852,9 +855,11 @@ html, body {
   justify-content: space-around;
 }
 .flex-container-2 p {
-  margin: 7px 0;
-  font-weight: 300;
-  font-size: 1.7rem;
+  font-family: 'Fjalla One';
+  letter-spacing: 1.2px;
+  margin: 5px 0;
+  font-weight: 200;
+  font-size: 1.6rem;
 }
 .publications {
   display: flex;
@@ -986,6 +991,8 @@ html, body {
   margin-bottom: 800px;
 }
 .alumni .title {
+  font-family: 'DM Serif Text';
+  color: rgb(131, 144, 83);
   text-align: center;
   font-size: 2.2rem;
 }
@@ -993,7 +1000,7 @@ html, body {
   height: 500px;
   width: 300px;
   margin: 20px 30px;
-  background-color: rgb(46, 84, 116);
+  background-color: rgb(84, 88, 65);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -1015,17 +1022,23 @@ html, body {
   align-items: flex-start;
 }
 .alumni .card .details h1 {
+  font-family: 'MD Serif Text';
+  color: rgb(235, 164, 69);
   font-size: 1.5rem;
   margin: 0;
   margin-top: 20px;
   margin-left: 15px;
 }
 .alumni .card .details h4 {
-  font-size: 1.1rem;
-  font-weight: 300;
+  font-family: 'Libre Franklin';
+  font-size: 1rem;
+  font-weight: 500;
   margin-left: 15px;
+  margin-top: 5px;
 }
 .alumni .card .details p {
+  font-family: 'Libre Franklin';
+  font-size: 0.9rem;
   margin-top: auto;
   text-align: left;
   margin-bottom: 40px;
