--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,9 @@
 
 body {
   background-color: #F2E6CA;
+  /* background-image: url("/public/images/Background1.svg");
+  background-repeat: repeat;  */
+  background-size: 90%;
   margin: 0;
 }
 html, body {
@@ -44,7 +47,7 @@ html, body {
 }
 
 #root {
-  background-color: #F2E6CA;
+  /* background-color: #F2E6CA; */
 }
 .tabs {
   animation-name: fadeIn;
@@ -63,6 +66,8 @@ html, body {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid black;
+  background-image: none;
+  background-color: #F1E5C9;
 }
 .logo-title {
   color: rgb(84, 88, 65);
