--- a/src/App.css
+++ b/src/App.css
@@ -1367,3 +1367,79 @@ html, body {
 .submenu-item:hover {
   background: #f5f5f5;
 }
+
+
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.project-page-title{
+}
+.project-page-title h1{
+  background-color: white;
+  width: fit-content;
+  padding: 1rem 15rem;
+  margin: 0 auto;
+  transform: translateY(-50%);
+  font-size: 3.5rem;
+}
+.project-page-title img{
+  width: 90vw;
+}
+.project .project-container{
+
+}
+
+.project .project-card {
+    background-color: rgba(255, 255, 255, 0.497);
+    min-width: 60vw;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 5vh 0;
+    padding-left: 2vw;
+    margin-bottom: 2vh;
+}
+.project-card h1{
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 2  px;
+}
+.project-card a{
+  font-weight: 800;
+}
+
+.book-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90vw;
+}
+
+.book-card{
+  display: flex;
+  padding: 2vh;
+  padding-bottom: 0;
+  margin-bottom: 2vh;
+  width: 100%;
+}
+
+.book-image {
+  
+}
+.book-image img{
+  width: 19vw;
+}
+
+.book-details{
+  font-size: 2.5rem;
+  line-height: 138%;
+  padding-left: 5vw;
+}
+.blue {
+  color: rgb(60, 60, 95);
+}
+.red {
+  color: rgb(209, 52, 52);
+}
